--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.453a37b3.js"></script>
-    <link rel="stylesheet" href="/assets/index.eb9643cd.css">
+    <script type="module" crossorigin src="/index.909762a5.js"></script>
+    <link rel="stylesheet" href="/index.eb9643cd.css">
   </head>
   <body>
     <div id="root"></div>
