--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/validate-package/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/index.909762a5.js"></script>
-    <link rel="stylesheet" href="/index.eb9643cd.css">
+    <script type="module" crossorigin src="/validate-package/index.909762a5.js"></script>
+    <link rel="stylesheet" href="/validate-package/index.eb9643cd.css">
   </head>
   <body>
     <div id="root"></div>
